--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
   
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161401279-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-161401279-1');
+</script>
+<!-- /Analytics -->
+
+
   <section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
@@ -50,7 +64,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="cid-qTkAaeaxX5" id="footer1-2">
+<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="cid-qTkAaeaxX5" id="footer1-2">
 
     
 
